ja/2.0/admin/design-guide.rst
==============
デザインの設定
==============

デザインの設定
==============

ここでは、検索画面のデザインに関する設定について説明します。

設定方法
--------

管理者アカウントでログイン後、メニューのデザインをクリックします。

|image0|

以下の画面で検索画面を編集することができます。

|image1|

画像ファイル
------------

検索画面で使用する画像ファイルをアップロードすることができます。サポートしている画像ファイル名は
jpg、gif、png です。

画像ファイル名
--------------

アップロードする画像ファイルにファイル名を指定したい場合に利用します。省略した場合はアップロードしたファイル名が利用されます。

デザイン JSP ファイル
---------------------

検索画面の JSP ファイルを編集することができます。対象の JSP
ファイルの編集ボタンを押下することで、現在の JSP
ファイルを編集することができます。また、デフォルトを使用ボタンを押下すると、インストール時の
JSP
ファイルとして編集することができます。編集画面で更新ボタンで保存することで、変更が反映されます。

以下に記述方法の例を示します。

+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| トップページ (フレーム)       | 検索トップページの JSP ファイルです。この JSP ファイルが各部分の JSP ファイルを include しています。                                                                 |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| トップページ (Headタグ内)     | 検索トップページの head タグ内を表現する JSP ファイルです。meta タグ、title タグ、script タグなどを編集したい場合に変更します。                                      |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| トップページ (コンテンツ)     | 検索トップページの body タグ内を表現する JSP ファイルです。                                                                                                          |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (フレーム)     | 検索結果一覧ページの JSP ファイルです。この JSP ファイルが各部分の JSP ファイルを include しています。                                                               |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (Headタグ内)   | 検索結果一覧ページの head タグ内を表現する JSP ファイルです。meta タグ、title タグ、script タグなどを編集したい場合に変更します。                                    |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (ヘッダー)     | 検索結果一覧ページのヘッダー部分を表現する JSP ファイルです。ページ上部の検索フォームなどが含まれています。                                                          |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (フッター)     | 検索結果一覧ページのフッター部分を表現する JSP ファイルです。ページ下部のコピーライトが含まれています。                                                              |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (コンテンツ)   | 検索結果一覧ページの検索結果部分を表現する JSP ファイルです。検索結果があるときに利用される JSP ファイルです。検索結果の表現をカスタマイズしたい場合に変更します。   |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| 検索結果ページ (結果なし)     | 検索結果一覧ページの検索結果部分を表現する JSP ファイルです。検索結果がないときに利用される JSP ファイルです。                                                       |
+-------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+

携帯用画面も PC 用と同様に編集することができます。

.. |image0| image:: ../../../resources/images/ja/2.0/design-1.png
.. |image1| image:: ../../../resources/images/ja/2.0/design-2.png
